                                  _   _ ____  _
                              ___| | | |  _ \| |
                             / __| | | | |_) | |
                            | (__| |_| |  _ <| |___
                             \___|\___/|_| \_\_____|

                                  Changelog

Daniel Stenberg (28 Aug 2008)
- Dengminwen reported that libcurl would lock a (cookie) share twice (without
  an unlock in between) for a certain case and that in fact works when using
  regular windows mutexes but not with pthreads'! Locks should of course not
  get locked again so this is now fixed.
  http://curl.haxx.se/mail/lib-2008-08/0422.html

- I'm abandoning the system with the web site mirrors (but keeping download
  files bing mirrored) and thus I've changed the URL in the cookiejar header
  to no longer use curlm.haxx.se but instead use the main site curl.haxx.se

Daniel Fandrich (27 Aug 2008)
- Fixed test case 1065 by changing the handling of CURLOPT_UPLOAD to set
  the HTTP method to GET (or HEAD) when given a value of 0.

- Added test cases 1068 and 1069 to test a simple HTTP PUT from stdin.  Test
  case 1069 fails in a similar manner to test 1065 so is added to DISABLED.

Yang Tse (27 Aug 2008)
- Fix generation of MS VC6 .dsp file to make it support compilation of either
  dynamic (DLL) or static (LIB) libcurl libraries in debug and release modes.

Daniel Fandrich (26 Aug 2008)
- Fixed out of memory problems that caused torture test failures in tests
  1021 and 1067.

Yang Tse (26 Aug 2008)
- Added check and symbol definition for WIN32 file API usage in configure,
  supporting configure's --disable-largefile option for WIN32 targets also.

- Non-configure systems which do not use config-win32.h configuration file,
  and want to use the WIN32 file API, must define USE_WIN32_LARGE_FILES or
  USE_WIN32_SMALL_FILES as appropriate in their own configuration files.

Daniel Stenberg (23 Aug 2008)