@@ -113,12 +113,14 @@ PASVBADIP
  - makes PASV send back an illegal IP in its 227 response
 
 For HTTP/HTTPS:
-auth_required - if this is set and a POST/PUT is made without auth, the
+auth_required   if this is set and a POST/PUT is made without auth, the
                 server will NOT wait for the full request body to get sent
-idle -          do nothing after receiving the request, just "sit idle"
-stream -        continuously send data to the client, never-ending
-pipe: [num] -   tell the server to expect this many HTTP requests before
+idle            do nothing after receiving the request, just "sit idle"
+stream          continuously send data to the client, never-ending
+pipe: [num]     tell the server to expect this many HTTP requests before
                 sending back anything, to allow pipelining tests
+skip: [num]     instructs the server to ignore reading this many bytes from a PUT
+                or POST request
 </servercmd>
 </reply>
 
